src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ANSTNR__c</fullName>
        <label>Employee No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARB_TFN__c</fullName>
        <label>ARB_TFN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>TEXT(Account.Postal_Address_Country__c )</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Involved_Party_ID__c</fullName>
        <description>Populated by workflow for search filtering purposes</description>
        <label>Account Involved Party ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Text__c</fullName>
        <label>Account Text</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <description>Used to indicate what type of activities the Contact Person shall be targeted for</description>
        <label>Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Seasonal Greeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Marketing Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.fl.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Email_Address__c</fullName>
        <label>Additional Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Phone__c</fullName>
        <label>Additional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Breve_Behavior__c</fullName>
        <label>Breve Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breve_Demographic__c</fullName>
        <label>Breve Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breve_Overall__c</fullName>
        <label>Breve Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Mobile__c</fullName>
        <description>Normalised contact mobile phone number (Mobile).</description>
        <inlineHelpText>Normalised contact mobile phone number (Mobile).</inlineHelpText>
        <label>CC Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CC_Phone__c</fullName>
        <description>Normalised contact phone number (Phone).</description>
        <inlineHelpText>Normalised contact phone number (Phone).</inlineHelpText>
        <label>CC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Campaign_Task__c</fullName>
        <label>Campaign Task</label>
        <picklist>
            <picklistValues>
                <fullName>NO TASK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK LO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO FI DPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_description__c</fullName>
        <description>MKTO to supply description on what is to be done for the task related to the campaign</description>
        <label>Campaign description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_name__c</fullName>
        <description>MKTO to provide campaign name to be used when task is created to relate to campaign id</description>
        <label>Campaign name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>D96</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timelønnet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Category__c</fullName>
        <label>Contact Category</label>
        <picklist>
            <picklistValues>
                <fullName>Daily Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person_ID_Counter__c</fullName>
        <description>This is the Counter for Contact Person ID. If the Contact is created by an user that is not an integration user the Contact Number ID Counter field will be copied to the Contact Person ID field which is an external Id.</description>
        <displayFormat>CRM-{0}</displayFormat>
        <label>Contact Person ID Counter</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Person_ID__c</fullName>
        <description>This is the unique Contact Person ID that is an external Id and will be set by the system that is creating the contact. If CRM is creating the contact the Contact Person ID Counter value will be set in this field.</description>
        <externalId>true</externalId>
        <label>Contact Person ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Person_Newsletter__c</fullName>
        <label>Contact Person Newsletter</label>
        <picklist>
            <picklistValues>
                <fullName>Logistik Magasin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK Direkte - Key Accounts (Seg 5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK Direkte - Bureau/Influencer (Seg 4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK Direkte - E-Commerce(Seg 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK Direkte - Business Comm.(Seg 3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDK Direkte - Marketing (Seg 2)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Type__c</fullName>
        <label>Contact Person Type</label>
        <picklist>
            <picklistValues>
                <fullName>Official</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostNord Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Web Shop Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Contact Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <label>Cost Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_SAP_ERP__c</fullName>
        <label>DK SAP ERP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Country__c</fullName>
        <label>Employee Country</label>
        <picklist>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Category__c</fullName>
        <label>Employment Category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Advertising_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Advertising Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Contact_Person_Status__c</fullName>
        <label>External Contact Person Status</label>
        <picklist>
            <picklistValues>
                <fullName>DK:ST00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:STRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:ST500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRAUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRKRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRKSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRMA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRMIK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRPTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK:SRREV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Provider_Party_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Provider Party ID</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Provider_Party_Parent_ID__c</fullName>
        <label>External Provider Party Parent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Provider_Relationship_ID__c</fullName>
        <label>External Provider Relationship ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Lifecycle_Status__c</fullName>
        <label>Internal Lifecycle Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Org_Unit_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked at creation, when a contact record is generated by the system. For example during the local investigation flow (structured communication in customer service), when there&apos;s a need for contacts corresponding to the PostNord Org Unit accounts.</description>
        <label>Is Org Unit Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>af</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>he</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logistics_Behavior__c</fullName>
        <label>Logistics Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistics_Demographic__c</fullName>
        <label>Logistics Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistics_Overall__c</fullName>
        <label>Logistics Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logistik_Magasin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logistik Magasin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Status__c</fullName>
        <description>Marketing Status for Contacts</description>
        <label>Marketing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meddelende_Behavior__c</fullName>
        <label>Meddelende Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meddelende_Demographic__c</fullName>
        <label>Meddelende Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meddelende_Overall__c</fullName>
        <label>Meddelende Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <label>Org ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_Direkte_Bureau_Influencer_Seg_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK Direkte - Bureau/Influencer (Seg 4)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK_Direkte_Business_Comm_Seg_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK Direkte - Business Comm. (Seg 3)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK_Direkte_E_Commerce_Seg_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK Direkte - E-Commerce (Seg 1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK_Direkte_Key_Accounts_Seg_5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK Direkte - Key Accounts (Seg 5)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDK_Direkte_Marketing_Seg_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK Direkte - Marketing (Seg 2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PNCM_ID__c</fullName>
        <externalId>true</externalId>
        <label>PNCM ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNCM_Parent_ID__c</fullName>
        <label>PNCM Parent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_DK_Bureau__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bureau</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_DK_E_Commerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>e-handel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_DK_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_DK_Letters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_DK_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Markedsføring &amp; Reklame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_DK_Parcels_and_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pakker &amp; Logistik</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_DK_Stamps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frimærker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_DK_Survey_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN DK Survey Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_ERP_Contact_Person_ID__c</fullName>
        <label>PN ERP Contact Person ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Email_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Email Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Internal_Contact_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Internal Contact Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Mail_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Mail Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Mark_As_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN_Mark_As_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Phone_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Phone Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_SMS_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN SMS Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_ErrorReasonCode__c</fullName>
        <label>PN Synchronization ErrorReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronization Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSNNR__c</fullName>
        <label>PSNNR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Channel__c</fullName>
        <description>Created as part of IM510061</description>
        <label>Permission Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Opt In - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt In - Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt In - Webform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt In - Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt In - Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt In - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out - Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out - Webform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out - E-mail Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out - Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permission_Channel_timestamp__c</fullName>
        <label>Permission Channel timestamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Time_stamp__c</fullName>
        <label>Permission Time stamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Interests__c</fullName>
        <label>Personal Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Ice Hockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Football</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor/Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music – Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music – Modern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art/Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Post_Nord_Programmes_Behavior__c</fullName>
        <label>Post Nord Programmes Behavior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Nord_Programmes_Demographic__c</fullName>
        <label>Post Nord Programmes Demographic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Nord_Programmes_Overall__c</fullName>
        <label>Post Nord Programmes Overall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Psnnr_Verification__c</fullName>
        <label>Psnnr Verification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <label>Sentiment</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Priorities__c</fullName>
        <label>Top Priorities</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <label>Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__ActimizerCallback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer Scheduled Redial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__CallAttempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actimizer Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__DialTime__c</fullName>
        <label>Actimizer Redial Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who picked this lead for dialing</description>
        <label>Actimizer Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactsToDial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__NoInterestDate__c</fullName>
        <label>Actimizer No Interest Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__NoInterest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer No Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Notes__c</fullName>
        <label>Actimizer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__RedialPhone__c</fullName>
        <label>Actimizer Redial Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__SuccessDate__c</fullName>
        <label>Actimizer Success Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actimizer Success</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>